Salesforce/main/default/main/default/objects/SiteUserAccount__c/SiteUserAccount__c.object-meta.xml
<CustomObject>
    <label>SiteUserAccount</label>
    <nameField>
        <label>Nombre de SiteUserAccount</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SiteUserAccounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>