Salesforce/main/default/main/default/objects/SiteUserAccount__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SiteUserAccounts</relationshipLabel>
    <relationshipName>SiteUserAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>