Salesforce/main/default/main/default/objects/SiteUserAccount__c/fields/Hours_Spent__c.field-meta.xml
<CustomField>
    <fullName>Hours_Spent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Hs. trabalhadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>