Salesforce/main/default/main/default/objects/SiteUserAccount__c/fields/SiteUser__c.field-meta.xml
<CustomField>
    <fullName>SiteUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SiteUser</label>
    <referenceTo>SiteUser__c</referenceTo>
    <relationshipLabel>SiteUserAccounts</relationshipLabel>
    <relationshipName>SiteUserAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>